add condition tests
